--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: node_js
 
 env:
-  - DATABASE_URL=postgresql://postgres@localhost:5432/avo_shopper
+  - DATABASE_URL=postgresql://postgres@localhost:5432/avodb
 
 node_js:  
   - 12
 
 before_script:
-  - psql -c 'create database  avo_shopper;' -U postgres
-  - psql -U postgres -d avo_shopper -a -f ./sql/tables.sql
+  - psql -c 'create database  avodb;' -U postgres
+  - psql -U postgres -d avodb -a -f ./sql/tables.sql
 
 services:
   - postgresql
